# plat

./: .gitignore  .gitmodules  CMakeLists.txt  Configure.cmake  EmptyProjectDetails.txt  Exportplat.cmake.in  Findplat.cmake  LICENSE.txt  Makefile  ProjectDetails.txt  README.markdown  TODO.txt  plat.pc.in
src/plat/: cc.h  config.h.in  endian.h  os.h  plat.h
tests/: test_plat_cc_gnu.c
